--- a/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory/Views/Shared/_Layout.cshtml
+++ b/Databases-Teamwork-Practical-Project/SantasToyFactory/SantasToyFactory/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                 </div>
                 <div class="float-right">
                     <section id="login">
-                       Hello, <span class="username">@User.Identity.Name</span>!
+                        @Html.Partial("_LoginPartial")
                     </section>
                     <nav>
                         <ul id="menu">
